# kick_streamer_monitor

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  cookies.txt  kick-monitor  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  simple_test.py  test_cookie_persistence.py  test_kick_cookie_flow.py  test_socket_binding_cookies.py  test_thread_cookie_isolation.py  test_user_dashboard_debug.py
.claude/: settings.local.json
migrations/: add_worker_tracking_columns.sql
sample files/: debug.txt  worker_ipv6_c2.py  worker_proxy.py
scripts/: add_analytics_tables.py  add_streamer_columns.py  add_viewer_tracking.py  fix_passwords.py  generate_password_hash.py  migrate_database.py  validate_mvp.py
specs/001-kick-monitor-this/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-kick-monitor-this/contracts/: cli-interface.yaml  kick-api.yaml  websocket-events.yaml
src/cli/: __init__.py  analytics.py  config.py  database.py  help.py  main.py  manual.py  service.py  streamers.py  test_methods.py
src/lib/: config.py  errors.py  health.py  logging.py  performance.py  processor.py
src/models/: __init__.py  configuration.py  schema.sql  status_event.py  streamer.py  user.py  user_schema.sql
src/services/: __init__.py  analytics.py  auth.py  auth_manager.py  browser_client.py  database.py  hybrid_monitor.py  monitor.py  simple_monitor.py  snags_database.py  web_dashboard.py  websocket.py  worker_c2_api.py
tests/contract/: test_cli_interface.py  test_kick_channels.py  test_kick_oauth.py  test_websocket_events.py
tests/e2e/: __init__.py  test_streamer_monitoring_workflow.py
tests/fixtures/: __init__.py  test_db.py  websocket_utils.py
tests/integration/: test_auth.py  test_auth_integration.py  test_database.py  test_manual_mode.py  test_mvp.py  test_status_flow.py  test_websocket.py  test_websocket_integration.py
tests/performance/: __init__.py  benchmark.py  load_testing.py  profiling.py  test_system_performance.py
tests/unit/: test_config.py  test_lib_config.py  test_lib_errors.py  test_lib_processor.py  test_models.py  test_models_streamer.py
